// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RequestStatus /> should render correctly RequestStatus with requestState failed 1`] = `
<Fragment>
  <div
    className="StatusScreen StatusScreen--transparent"
  >
    <Status
      id="FakeID-status"
      message="Fake error message"
      position="horizontal"
      type="error"
    />
  </div>
</Fragment>
`;

exports[`<RequestStatus /> should render correctly RequestStatus with requestState pending 1`] = `
<Fragment>
  <div
    className="StatusScreen StatusScreen--transparent"
  >
    <Loader
      id="FakeID-loader"
      size="medium"
    />
  </div>
</Fragment>
`;

exports[`<RequestStatus /> should render correctly RequestStatus with requestState succeeded 1`] = `
<Fragment>
  <div>
    <p>
      Test
    </p>
  </div>
</Fragment>
`;
